--- a/mask-demo/pom.xml
+++ b/mask-demo/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.github.chyohn.mask</groupId>
     <artifactId>mask-parent</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-RELEASE</version>
   </parent>
 
   <artifactId>mask-demo</artifactId>
