--- a/mask/pom.xml
+++ b/mask/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>io.github.chyohn.mask</groupId>
     <artifactId>mask-parent</artifactId>
-    <version>1.0.0-RELEASE</version>
+    <version>1.0.1-SNAPSHOT</version>
   </parent>
 
   <groupId>io.github.chyohn.mask</groupId>
   <artifactId>mask</artifactId>
-  <version>1.0.0-RELEASE</version>
+  <version>1.0.1-SNAPSHOT</version>
 
 
   <dependencies>
