--- a/mask-demo/pom.xml
+++ b/mask-demo/pom.xml
@@ -11,17 +11,11 @@
 
   <artifactId>mask-demo</artifactId>
 
-  <properties>
-    <maven.compiler.source>8</maven.compiler.source>
-    <maven.compiler.target>8</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-
   <dependencies>
     <dependency>
-      <groupId>org.chyohn.mask</groupId>
+      <groupId>io.github.chyohn.mask</groupId>
       <artifactId>mask</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
