--- a/mask/pom.xml
+++ b/mask/pom.xml
@@ -12,6 +12,11 @@
   <groupId>io.github.chyohn.mask</groupId>
   <artifactId>mask</artifactId>
   <version>1.0.1-SNAPSHOT</version>
+  <name>${project.groupId}:${project.artifactId}</name>
+  <url>https://github.com/chyohn/mask</url>
+  <description>
+    Chyohn Mask用于对敏感信息脱敏，比如用户名、银行卡号、身份照、邮箱、手机号等等。具有功能强大，使用方式简单的特点。
+  </description>
 
 
   <dependencies>
